# trassirovka

./: CMakeLists.txt  Figures.cpp  Figures.h  README.md  Screen.cpp  Screen.h  data.txt  figures.txt  task5_trassirovka.cpp
